--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-    background-color: #d8dbe2;
-    color: #1b1b1e;
+    background-color: #2b2c2c;
+    color: #ffffff;
     padding: 1rem;
     align-items: center;
     margin: auto;
@@ -14,36 +14,24 @@ p {
 
 
 .nome {
-    font-family: "Lexend", sans-serif;
-    font-size: 3rem;
-    width: 70%;
-    align-self: flex-end;
+  font-family: "Michroma", sans-serif;
+  font-size: 3rem;
+  text-align: center;
+  margin-bottom: 1rem;
+  width: 100%;
+  color: hsl(165, 55%, 44%);
+
 }
+
 
 
 .menu {
-    display: flexbox;
-    flex-direction: row;
-    flex-grow: calc();
-    padding: 0.5rem;
-    font-family: "Roboto Condensed", sans-serif;
-}
-
-
-#cabecalho {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-
-/* DESTACAR SELEÇÃO */
-div[selecionado] {
-    font-weight: bold;
-    box-shadow: 0 0 0.2rem 0.1rem #373f51;
-    border-color: #373f51;
-    color: #373f51;
-    transition: 0.3s;
+  display: flex;
+  justify-content: center; 
+  flex-wrap: wrap;          
+  gap: 1rem;
+  padding: 1rem;
+  font-family: "Quicksand", sans-serif;
 }
 
 
@@ -52,27 +40,39 @@ div[selecionado] {
     justify-content: space-around;
     margin: 0.2rem;
     padding: 0.2rem;
-    padding-left: 1rem;
     border-radius: 1rem;
     height: 1.5rem;
     width: 8rem;
     text-align: center;
     background-color: white;
     border-style: solid;
-    border-color: #58a4b0;
-    color: #58a4b0;
+    border-color: hsl(165, 55%, 44%);
+    color: hsl(165, 55%, 44%);
     border-radius: 0.4rem;
-    transition: 0.5s;
 }
 
 
-/* DESTACAR NOME */
 .opcaoMenu:hover {
-    box-shadow: 0 0 0.2rem 0.1rem #373f51;
-    border-color: #373f51;
-    color: #373f51;
-    transition: 0.3s;
+    border-color: hsl(226, 85%, 56%);
+    color: hsl(226, 85%, 56%);
     cursor: pointer;
+}
+
+
+#cabecalho {
+  display: flex;
+  flex-direction: column; 
+  align-items: center;    
+  text-align: center;
+  gap: 1rem;
+}
+
+
+
+div[selecionado] {
+    font-weight: bold;
+    border-color: hsl(226, 85%, 56%);
+    color: hsl(226, 85%, 56%);  
 }
 
 
@@ -81,30 +81,26 @@ div[selecionado] {
     margin: auto;
     font-size: large;
     height: 3rem;
-    border-radius: 1.5rem;
-    background-color: #373f51;
-    border-color: #373f51;
-    color: white;
+    border-radius: 1rem;
+    background-color: hsl(226, 85%, 56%);
+    border-color: hsl(226, 85%, 56%);
     font-weight: bold;
     transition: 0.5s;
 }
 
 
 .botaoFormulario:hover {
-    box-shadow: 0 0 0.2rem 0.1rem #373f51;
     cursor: pointer;
-    transition: 0.3s;
 }
 
 
 .conteudo {
-    background-color: whitesmoke;
+    background-color: rgb(32, 32, 32);
     padding: 1rem 0.6rem 1rem 0.6rem;
-    font-family: "Faustina", serif;
+    font-family: "Quicksand", sans-serif;
     font-size: 1.4rem;
     text-align: justify;
     border-radius: 0.2rem 0.2rem 0.2rem 0.2rem;
-    transition: 0.5s;
 }
 
 
@@ -112,7 +108,7 @@ div[selecionado] {
     text-align: center;
     font-size: larger;
     font-weight: bold;
-    font-family: "Lexend", sans-serif;
+    font-family: "Quicksand", sans-serif;
 }
 
 
